--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,11 +1,13 @@
-lib_LTLIBRARIES = libshmem.la
-libshmem_la_SOURCES = heapx.c init.c logger.c malloc.c pe.c shmemi_pmi1.c shmemi_pmi2.c shmemi_pmix.c timer.c
-libshmem_la_LDFLAGS = -version-info 0:0:0
-libshmem_la_CFLAGS = $(AM_CFLAGS)
-libshmem_la_CPPFLAGS = $(PMIX_CPPFLAGS)
+LIBSHMEM_SOURCES       = init.c malloc.c
 
-lib_LIBRARIES = libshmem.a
-libshmem_a_SOURCES = heapx.c init.c logger.c malloc.c pe.c shmemi_pmi1.c shmemi_pmi2.c shmemi_pmix.c timer.c
-libshmem_a_CPPFLAGS = $(PMIX_CPPFLAGS)
+SUBDIRS                = shmemi
 
-include_HEADERS = shmem.h
+lib_LTLIBRARIES        = libshmem.la
+libshmem_la_SOURCES    = $(LIBSHMEM_SOURCES)
+libshmem_la_CFLAGS     = $(AM_CFLAGS)
+libshmem_la_LDFLAGS    = -version-info 0:0:0
+
+lib_LIBRARIES          = libshmem.a
+libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
+
+include_HEADERS        = shmem.h
