--- a/scripts/noshcc.in
+++ b/scripts/noshcc.in
@@ -9,8 +9,24 @@ shmem_dir=@prefix@
 shmem_include=@includedir@
 shmem_lib=@libdir@
 
+pmix_stanza="-L$pmix_libdir -Wl,-rpath,$pmix_libdir -lpmix"
+shmemlib_stanza="-L$shmem_lib -Wl,-rpath,$shmem_lib -lshmem -lshmemi"
+
+# check to see if linking required: if not, throw away link args
+for c in $@
+do
+    case $c in
+        -[cES])
+            pmix_stanza=""
+            shmemlib_stanza=""
+            ;;
+        *)
+            ;;
+    esac
+done
+    
 $compiler \
     -I$shmem_include \
     $@ \
-    -L$pmix_libdir -Wl,-rpath,$pmix_libdir -lpmix \
-    -L$shmem_lib -Wl,-rpath,$shmem_lib -lshmem -lshmemi
+    $pmix_stanza \
+    $shmemlib_stanza
