--- a/src/shmem.h.in
+++ b/src/shmem.h.in
@@ -843,16 +843,17 @@ extern "C"
 
     /* lower numbers match Fortran return values */
 
-#define SHMEM_MALLOC_OK                   (0L)
-#define SHMEM_MALLOC_BAD_SIZE             (-1L)
-#define SHMEM_MALLOC_FAIL                 (-2L)
-#define SHMEM_MALLOC_NOT_IN_SYMM_HEAP     (-3L)
-#define SHMEM_MALLOC_ALREADY_FREE         (-4L)
-#define SHMEM_MALLOC_NOT_ALIGNED          (-5L)
-
-#define SHMEM_MALLOC_MEMALIGN_FAILED      (-11L)
-#define SHMEM_MALLOC_REALLOC_FAILED       (-12L)
-#define SHMEM_MALLOC_SYMMSIZE_FAILED      (-10L)
+    enum shmem_fortran_errors {
+        SHMEM_MALLOC_OK                  = (0L),
+        SHMEM_MALLOC_BAD_SIZE            = (-1L),
+        SHMEM_MALLOC_FAIL                = (-2L),
+        SHMEM_MALLOC_NOT_IN_SYMM_HEAP    = (-3L),
+        SHMEM_MALLOC_ALREADY_FREE        = (-4L),
+        SHMEM_MALLOC_NOT_ALIGNED         = (-5L),
+        SHMEM_MALLOC_MEMALIGN_FAILED     = (-11L),
+        SHMEM_MALLOC_REALLOC_FAILED      = (-12L),
+        SHMEM_MALLOC_SYMMSIZE_FAILED     = (-10L)
+    };
 
 #if 0
     long malloc_error;
