--- a/src/shmem.h.in
+++ b/src/shmem.h.in
@@ -278,12 +278,10 @@ extern "C"
     /*
      * OpenSHMEM release
      */
-#define SHMEM_MAJOR_VERSION 1
-#define SHMEM_MINOR_VERSION 3
-
-#define SHMEM_MAX_NAME_LEN 64
-
-#define SHMEM_VENDOR_STRING "OSSS/SBU Reference Implementation"
+#define SHMEM_MAJOR_VERSION @SHMEM_MAJOR_VERSION@
+#define SHMEM_MINOR_VERSION @SHMEM_MINOR_VERSION@
+#define SHMEM_MAX_NAME_LEN @SHMEM_MAX_NAME_LEN@
+#define SHMEM_VENDOR_STRING @SHMEM_VENDOR_STRING@
 
     /**
      * @brief determines the major.minor version numbers of this release.
