--- a/src/shmemi/Makefile.am
+++ b/src/shmemi/Makefile.am
@@ -1,3 +1,5 @@
+SUBDIRS                = dlmalloc
+
 LIBSHMEMI_SOURCES      = shmemi.c \
 				pmi1-client.c pmi2-client.c pmix-client.c \
 				malloc.c logger.c heapx.c timer.c pe.c
