--- a/src/shmem.h.in
+++ b/src/shmem.h.in
@@ -281,7 +281,7 @@ extern "C"
 #define SHMEM_MAJOR_VERSION @SHMEM_MAJOR_VERSION@
 #define SHMEM_MINOR_VERSION @SHMEM_MINOR_VERSION@
 #define SHMEM_MAX_NAME_LEN @SHMEM_MAX_NAME_LEN@
-#define SHMEM_VENDOR_STRING @SHMEM_VENDOR_STRING@
+#define SHMEM_VENDOR_STRING "@SHMEM_VENDOR_STRING@"
 
     /**
      * @brief determines the major.minor version numbers of this release.
