--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,5 +17,5 @@ libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
 # retain tree
 nobase_include_HEADERS = shmem.h mpp/shmem.h shmemx.h mpp/shmemx.h
 
-bin_PROGRAMS           = nosh_info
-nosh_info_SOURCES      = nosh_info.c
+bin_PROGRAMS           = osh_info
+osh_info_SOURCES       = osh_info.c
