--- a/src/shmemi/Makefile.am
+++ b/src/shmemi/Makefile.am
@@ -8,7 +8,7 @@ lib_LTLIBRARIES        = libshmemi.la
 libshmemi_la_SOURCES   = $(LIBSHMEMI_SOURCES)
 libshmemi_la_CFLAGS    = $(AM_CFLAGS)
 libshmemi_la_CPPFLAGS  = $(PMIX_CPPFLAGS)
-libshmemi_la_LDFLAGS   = -version-info 0:0:0
+libshmemi_la_LDFLAGS   = -version-info 0:0:0 $(PMIX_LDFLAGS)
 
 lib_LIBRARIES          = libshmemi.a
 libshmemi_a_SOURCES    = $(LIBSHMEMI_SOURCES)
