--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS                = shmemi
 
-LIBSHMEM_SOURCES       = init.c malloc.c version.c atomics.c cache.c
+LIBSHMEM_SOURCES       = init.c malloc.c version.c atomics.c cache.c \
+				pe.c ptr.c accessible.c
 
 if ENABLE_EXPERIMENTAL
 LIBSHMEM_SOURCES      += wtime.c xor.c
