--- a/src/shmemi/Makefile.am
+++ b/src/shmemi/Makefile.am
@@ -2,8 +2,7 @@ SUBDIRS                = dlmalloc
 
 LIBSHMEMI_SOURCES      = shmemi.c \
 				pmi1-client.c pmi2-client.c pmix-client.c \
-				malloc.c logger.c heapx.c timer.c pe.c \
-				ptr.c
+				malloc.c logger.c heapx.c timer.c pe.c
 
 lib_LTLIBRARIES        = libshmemi.la
 libshmemi_la_SOURCES   = $(LIBSHMEMI_SOURCES)
