--- a/scripts/oshcc.in
+++ b/scripts/oshcc.in
@@ -10,6 +10,7 @@ shmem_lib=@libdir@
 
 shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
 shmemlib_libs="-lshmem -lshmemi -lshmemu"
+shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs"
 
 # check to see if linking required: if not, throw away link args
 for c in $@
@@ -26,4 +27,4 @@ done
 $compiler \
     -I$shmem_include \
     $@ \
-    $shmemlib_ldflags $shmemlib_libs
+    $shmemlib_stanza
