Add install hooks to add c++ variant names to cxx (bin, man).

--- a/configure.ac
+++ b/configure.ac
@@ -124,12 +124,12 @@ AC_SUBST([SHMEM_VENDOR_STRING], ['AC_PACKAGE_NAME'])
 
 AC_CONFIG_FILES([Makefile
 		src/shmemi/dlmalloc/Makefile
-		man/oshcc.1 man/oshcxx.1 man/oshc++.1 man/oshrun.1 man/osh_info.1
+		man/oshcc.1 man/oshcxx.1 man/oshrun.1 man/osh_info.1
 		src/Makefile
 		src/shmemi/Makefile src/shmemu/Makefile
 		scripts/Makefile
 		man/Makefile
-		scripts/oshcc scripts/oshcxx scripts/oshc++ scripts/oshrun
+		scripts/oshcc scripts/oshcxx scripts/oshrun
 		src/shmem.h src/version.h
 		src/shmemx.h
 		pkgconfig/Makefile
