--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,1 +1,5 @@
-bin_SCRIPTS = oshcc oshcxx oshc++ oshrun
+bin_SCRIPTS = oshcc oshcxx oshrun
+
+install-exec-hook:
+	cd $(bindir); \
+	cp -p oshcxx oshc++
