--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,1 +1,5 @@
-man1_MANS = oshcc.1 oshcxx.1 oshc++.1 oshrun.1 osh_info.1
+man1_MANS = oshcc.1 oshcxx.1 oshrun.1 osh_info.1
+
+install-data-hook:
+	cd $(man1dir); \
+	cp -p oshcxx.1 oshc++.1
