--- a/man/oshcxx.1.in
+++ b/man/oshcxx.1.in
@@ -1,8 +1,8 @@
 .TH oshcxx 1 ""
 .SH NAME
-\fBoshcxx\fP - compile an OpenSHMEM C++ program
+\fBoshcxx | oshc++\fP - compile an OpenSHMEM C++ program
 .SH SYNOPSIS
-\fBoshcxx\fP
+\fBoshcxx | oshc++\fP
 .RS
 .br
 [ underlying compiler flags ]
@@ -37,8 +37,6 @@ These wrapper programs are supplied as part of the Reference
 Library for convenience.
 .SH SEE ALSO
 oshcc(1),
-.br
-oshc++(1),
 .br
 oshfort(1),
 .br
