Rethinking dirctory layout for comms layer, utilities etc.
This is just a checkpoint.

--- a/configure.ac
+++ b/configure.ac
@@ -131,7 +131,9 @@ AC_CONFIG_FILES([Makefile
 		src/shmemi/dlmalloc/Makefile
 		man/oshcc.1 man/oshcxx.1 man/oshrun.1 man/osh_info.1
 		src/Makefile
-		src/shmemi/Makefile src/shmemu/Makefile
+		src/shmemi/Makefile
+		src/shmemi/shmemc/Makefile
+		src/shmemu/Makefile
 		scripts/Makefile
 		man/Makefile
 		scripts/oshcc scripts/oshcxx scripts/oshrun
