--- a/man/osh_info.1.in
+++ b/man/osh_info.1.in
@@ -1,4 +1,4 @@
-.TH osh_info 1 ""
+.TH osh_info 1 "" "OSSS"
 .SH NAME
 \fBosh_info\fP - provide information about this OpenSHMEM installation
 .SH SYNOPSIS
@@ -7,8 +7,6 @@
 \fBosh_info\fP displays information about this implementation of OpenSHMEM.  Output
 can include compile-time options, build system, supported features.
 .SH SEE ALSO
-oshcc(1),
-.br
-oshrun(1).
+osh_intro(1).
 .SH OPENSHMEM
 http://www.openshmem.org/
