--- a/man/oshcxx.1.in
+++ b/man/oshcxx.1.in
@@ -1,6 +1,6 @@
-.TH oshcxx 1 ""
+.TH oshcxx 1 "" "OSSS"
 .SH NAME
-\fBoshcxx | oshc++\fP - compile an OpenSHMEM C++ program
+\fBoshcxx | oshc++\fP \- compile an OpenSHMEM C++ program
 .SH SYNOPSIS
 \fBoshcxx | oshc++\fP
 .RS
@@ -36,10 +36,6 @@ how OpenSHMEM programs are compiled, linked and launched.
 These wrapper programs are supplied as part of the Reference
 Library for convenience.
 .SH SEE ALSO
-oshcc(1),
-.br
-oshfort(1),
-.br
-oshrun(1).
+osh_intro(1).
 .SH OPENSHMEM
 http://www.openshmem.org/
