--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,5 +1,17 @@
-bin_SCRIPTS = oshcc oshcxx oshrun
+bin_SCRIPTS      = oshcc oshrun
+
+if ENABLE_CXX
+
+bin_SCRIPTS     += oshcxx
 
 install-exec-hook:
 	cd $(bindir); \
 	cp -p oshcxx oshc++
+
+endif
+
+if ENABLE_FORTRAN
+
+bin_SCRIPTS     += oshfort
+
+endif
