--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,18 +34,7 @@ lib_LIBRARIES          = libshmem.a
 libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
 libshmem_a_CPPFLAGS    = $(shmemu_cppflags)
 
-# retain tree
-nobase_include_HEADERS = shmem_defines.h shmem.h \
-				mpp/shmem.h mpp/shmemx.h
-
-if ENABLE_EXPERIMENTAL
-SHMEMX_HEADER          = shmemx.h
-else
-SHMEMX_HEADER          = null-shmemx.h
-endif
-
-install-data-hook:
-	cp -p $(SHMEMX_HEADER) $(includedir)/shmemx.h
+include_HEADERS        = shmem_defines.h
 
 bin_PROGRAMS           = osh_info
 osh_info_SOURCES       = osh_info.c
